# xars

./: .bumpversion.cfg  .coveragerc  .gitignore  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  binning.py  conda-requirements.txt  conetorus.py  coordtrans.py  disk.py  montecarlo.py  photons.py  plot_cascade.py  pyproject.toml  rdataaddmultiple.py  rdatapowerlaw.py  runall.sh  runsphere.sh  runtorus.sh  runtorusBN.sh  runwedgetorus.py  setup.cfg  spectrumeval.py  spectrumeval.sh  spheretorus.py  torus2.py  torusBN.py  torusC.py  torusG.py  torusL.py  torusprofile.py  wedgetorus.py  xsect.py  xsects.py  xsects_convert.py
binning/: __init__.py  __main__.py  bending.py  bn.py  uniform.py  xrismbending.py
doc/: README.rst  cat3d.rst  faq.rst  models.rst  uxclumpy.rst  wada.rst  warpeddisk.rst  xars.rst
example-blobs/: generate_blobs.py
example-grid/: generate_warpeddisk.py
examples/: disk.py  runsphere.sh  runtorus.sh  torus2.py  torusBN.py  torusC.py  torusCNHeq.py  torusCcovfrac.py  torusG.py  torusL.py
geometries/: blobs.py  bntorus.py  clumpyspheretorus.py  clumpytorus.py  conetorus.py  disk.py  diskintorus.py  gradientconetorus.py  hydrotorus.py  layeredconetorus.py  spheretorus.py  wedgetorus.py
scripts/: vizfek2.py
xars/: coordtrans.py  montecarlo.py  photons.py  plot_cascade.py  rdataaddmultiple.py  rdatapowerlaw.py
xsects/: __init__.py  xsects_convert.py
xspecexport/: binning  binning.py  createblobtoruscutofftable.py  createclumpy2disktoruscutofftable.py  createclumpy2toruscutofftable.py  createclumpydisktoruscutofftable.py  (+13 more)
(+29 files in other folders)
